# sash

./: .cproject  .gitignore  .project  CMakeLists.txt  cd.c  cd.h  command.c  command.h  environ.c  environ.h  exec.c  exec.h  global.h  ls.c  ls.h  main.c  main.h  parser.c  parser.h  prompt.c  prompt.h  queue.c  queue.h  readme  stack.c  stack.h  todo  utility.c  utility.h
