cmake_minimum_required(VERSION 2.6)
project(sash)
include_directories(.)
if (UNIX)
	add_definitions("-Wall -pedantic")
endif()
include(CheckIncludeFiles)
include(CheckFunctionExists)
check_include_files(stdio.h HAVE_STDIO_H)
check_include_files(stdlib.h HAVE_STDLIB_H)
check_include_files(unistd.h HAVE_UNISTD_H)
check_include_files(string.h HAVE_STRING_H)
check_include_files(dirent.h HAVE_DIRENT_H)
check_include_files(sys/types.h HAVE_SYS_TYPES_H)
check_include_files(errno.h HAVE_ERRNO_H)
check_include_files(inttypes.h HAVE_INTTYPES_H)
check_function_exists(fork HAVE_FORK)
check_function_exists(system HAVE_SYSTEM)
check_function_exists(setenv HAVE_SETENV)
check_function_exists(getenv HAVE_GETENV)
check_function_exists(snprintf HAVE_SNPRINTF)
check_function_exists(readlink HAVE_READLINK)
check_function_exists(getpid HAVE_GETPID)
check_function_exists(chdir HAVE_CHDIR)
check_function_exists(opendir HAVE_OPENDIR)
check_function_exists(readdir HAVE_READDIR)
check_function_exists(closedir HAVE_CLOSEDIR)
add_executable(sash main.c main.h command.c command.h global.h parser.c
parser.h utility.c utility.h environ.c environ.h ls.c ls.h cd.c cd.h stack.c stack.h)
install (TARGETS sash DESTINATION bin)
