cmake_minimum_required(VERSION 2.4)
project(sash C)
include_directories(.)
if (UNIX)
	add_definitions("-Wall -pedantic -g")
else(UNIX)
	message("you do not run unix ...")
endif(UNIX)
include(CheckIncludeFiles)
include(CheckFunctionExists)
check_include_files(stdio.h HAVE_STDIO_H)
check_include_files(stdlib.h HAVE_STDLIB_H)
check_include_files(unistd.h HAVE_UNISTD_H)
check_include_files(string.h HAVE_STRING_H)
check_include_files(dirent.h HAVE_DIRENT_H)
check_include_files(sys/types.h HAVE_SYS_TYPES_H)
check_include_files(sys/wait.h HAVE_SYS_WAIT_H)
check_include_files(errno.h HAVE_ERRNO_H)
check_include_files(inttypes.h HAVE_INTTYPES_H)
check_include_files(limits.h HAVE_LIMITS_H)
check_function_exists(fork HAVE_FORK)
check_function_exists(system HAVE_SYSTEM)
check_function_exists(setenv HAVE_SETENV)
check_function_exists(getenv HAVE_GETENV)
check_function_exists(snprintf HAVE_SNPRINTF)
check_function_exists(readlink HAVE_READLINK)
check_function_exists(getpid HAVE_GETPID)
check_function_exists(chdir HAVE_CHDIR)
check_function_exists(opendir HAVE_OPENDIR)
check_function_exists(readdir HAVE_READDIR)
check_function_exists(closedir HAVE_CLOSEDIR)
check_function_exists(freopen HAVE_FREOPEN)
check_function_exists(fopen HAVE_FOPEN)
check_function_exists(fclose HAVE_FCLOSE)
# libraries
add_library(queue STATIC queue.c)
add_library(stack STATIC stack.c)
add_library(utility STATIC utility.c)
add_library(command STATIC command.c)
add_library(parser STATIC parser.c)
add_library(environ STATIC environ.c)
add_library(ls STATIC ls.c)
add_library(cd STATIC cd.c)
add_library(prompt STATIC prompt.c)
add_library(exec STATIC exec.c)
# executable
add_executable(sash main.c)
# linking
target_link_libraries(parser utility queue)
target_link_libraries(ls stack)
target_link_libraries(sash queue stack utility command parser environ ls cd prompt exec)
install (TARGETS sash DESTINATION bin)
